refactor: migrate application menu to tabs

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -959,7 +959,9 @@
     "app release confirmation": "app release confirmation",
     "app repository address": "app repository address",
     "app types": "app types",
+    "app-issues": "Issues",
     "appMonitor": "appMonitor",
+    "application": "application",
     "application / service / instance name": "application / service / instance name",
     "application branch rule": "application branch rule",
     "application description": "application description",
@@ -1030,6 +1032,7 @@
     "branch rule": "branch rule",
     "branch to commit": "branch to commit",
     "branch-config-tip": "The platform has strict relationship between branches and the environment. While the system has built-in best practice configuration, it supports users to customize the configuration",
+    "branches": "branches",
     "bug description": "bug description",
     "build cancelled": "build cancelled",
     "build created successfully": "build created successfully",
@@ -1100,7 +1103,6 @@
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
     "collapse file": "collapse file",
     "command": "command",
-    "comment area": "comment area",
     "commented at": "commented at",
     "commit ID": "commit ID",
     "commit branch": "commit branch",
@@ -1109,6 +1111,7 @@
     "commit message": "commit message",
     "commit unchanged": "commit unchanged",
     "commitID-input-tip": "please enter 40 characters consisting of lowercase letters and numbers",
+    "commits": "commits",
     "committed": "opening",
     "compare": "compare",
     "comparison result has been folded": "comparison result has been folded",
@@ -1235,7 +1238,6 @@
     "edit test plan": "edit test plan",
     "efficiency measure": "efficiency measure",
     "email": "email",
-    "emergency level": "emergency level",
     "empty, not empty": "Empty, Not empty",
     "empty-markdown-content": "\n### readme\n\n\n*Here you can show your talents on documentation*\n\n*to let members know the background, goals and other information of the project via awesome graph and text*\n\n*to share project documents, specifications and other materials*\n\n*and also...*",
     "encrypt": "encrypt",
@@ -1421,6 +1423,7 @@
     "medium": "medium",
     "memory size": "memory size",
     "merge description": "merge description",
+    "merge request": "merge request",
     "merge request detail": "merge request detail",
     "merge request has errors": "merge request has errors",
     "merge requests": "merge requests",
@@ -1821,6 +1824,7 @@
     "system": "system",
     "system log": "system log",
     "system properties": "system properties",
+    "tags": "tags",
     "target branch": "target branch",
     "target branch is protected, you have no permission yet": "target branch is protected, you have no permission yet",
     "task commands": "task commands",
@@ -2015,6 +2019,7 @@
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.",
     "RPC call": "RPC call",
     "RPC transaction": "RPC transaction",
+    "RegisterCenter": "RegisterCenter",
     "The selected interface weight will be set to": "The selected interface weight will be set to",
     "URL path": "URL path",
     "URL path prefix": "URL path prefix",
