--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -959,7 +959,9 @@
     "app release confirmation": "应用发布确认",
     "app repository address": "应用仓库地址",
     "app types": "应用类型",
+    "app-issues": "问题列表",
     "appMonitor": "应用监控",
+    "application": "应用",
     "application / service / instance name": "应用 / 服务 / 实例名",
     "application branch rule": "应用分支规则",
     "application description": "应用描述",
@@ -1030,6 +1032,7 @@
     "branch rule": "分支规则",
     "branch to commit": "提交分支",
     "branch-config-tip": "平台对于分支与环境有严格关系管理，系统内置最佳实践配置的同时，支持用户进行自定义编辑配置",
+    "branches": "分支",
     "bug description": "缺陷描述",
     "build cancelled": "构建已取消",
     "build created successfully": "创建构建成功",
@@ -1084,7 +1087,7 @@
     "click to expand": "点击展开",
     "clone application": "克隆应用",
     "cluster used by the environment": "环境所用的集群",
-    "code": "代码浏览",
+    "code": "代码",
     "code branch": "代码分支",
     "code content": "代码内容",
     "code coverage statistics": "代码覆盖率统计",
@@ -1100,7 +1103,6 @@
     "code-trigger-CI": "该分支代码发生变化时触发持续集成",
     "collapse file": "收起文件",
     "command": "命令",
-    "comment area": "评论区",
     "commented at": "评论于",
     "commit ID": "提交ID",
     "commit branch": "提交分支",
@@ -1109,6 +1111,7 @@
     "commit message": "提交信息",
     "commit unchanged": "提交不变",
     "commitID-input-tip": "请输入40位由小写字母和数字组成的字符",
+    "commits": "提交历史",
     "committed": "已提交",
     "compare": "比较",
     "comparison result has been folded": "对比结果已被收起",
@@ -1235,7 +1238,6 @@
     "edit test plan": "编辑测试计划",
     "efficiency measure": "效能度量",
     "email": "邮箱",
-    "emergency level": "紧急程度",
     "empty, not empty": "为空、不为空",
     "empty-markdown-content": "\n### readme\n\n\n*此处可以尽情发挥你文档小能手的才华*\n\n*可以通过一段酷炫的图文让项目成员都清楚项目的背景、目标等信息*\n\n*也可以共享项目文档、规范等材料*\n\n*还可以...*",
     "encrypt": "是否加密",
@@ -1421,6 +1423,7 @@
     "medium": "严重",
     "memory size": "内存数",
     "merge description": "合并描述",
+    "merge request": "合并请求",
     "merge request detail": "合并请求详情",
     "merge request has errors": "mr存在错误",
     "merge requests": "合并请求",
@@ -1821,6 +1824,7 @@
     "system": "系统",
     "system log": "系统日志",
     "system properties": "系统属性",
+    "tags": "标签",
     "target branch": "目标分支",
     "target branch is protected, you have no permission yet": "目标分支被保护，您暂无权限操作",
     "task commands": "任务指令",
@@ -2015,6 +2019,7 @@
     "Provides one-stop service system observation, including service monitoring, tracing, dashboard, and alarm.": "提供一站式的服务系统观测，包括服务监控、链路追踪、仪表盘和告警等功能。",
     "RPC call": "RPC 调用",
     "RPC transaction": "RPC事务",
+    "RegisterCenter": "注册中心",
     "The selected interface weight will be set to": "所选接口权重将置为",
     "URL path": "URL 路径",
     "URL path prefix": "URL 路径前缀",
