--- a/locales/en.json
+++ b/locales/en.json
@@ -13,6 +13,7 @@
     "API strategy": "API strategy",
     "API test": "API test",
     "API version": "API version",
+    "APIGateway": "APIGateway",
     "Alarm": "Alarm",
     "Alibaba Cloud": "Alibaba Cloud",
     "All members of the organization can view": "all members of the current company can view",
@@ -37,14 +38,12 @@
     "Chengdu": "Chengdu",
     "China": "China",
     "Cloud management": "Cloud management",
-    "Code": "Code",
     "Config": "Config",
     "Contact your organization administrator to invite you to join": "Contact your organization administrator to invite you to join",
     "DB error": "DB error",
     "Dashboard": "Dashboard",
     "Data source: API call management": "Data source: API call management",
     "December": "December",
-    "Deploy": "Deploy",
     "Deployment not allowed in {env} in network block period.": "during the period of network closure, deployment is prohibited in the {env}!",
     "DingTalk": "DingTalk",
     "DingTalk address": "DingTalk address",
@@ -78,16 +77,15 @@
     "July": "July",
     "June": "June",
     "Kuala lumpur": "Kuala lumpur",
+    "LogAnalyze": "LogAnalyze",
     "London": "London",
     "Malaysia": "Malaysia",
     "March": "March",
-    "Market": "Market",
     "May": "May",
     "Members under the project/application associated with the current API can view it.": "members under the project/application associated with the current API can view",
     "Memory quota": "Memory quota",
     "Middle-east & India": "Middle-east & India",
     "Mobile": "Mobile",
-    "Model": "Model",
     "Mon": "Mon",
     "Mumbai": "Mumbai",
     "New version available": "New version available",
@@ -116,7 +114,6 @@
     "Please enter version number, such as x.y.z.": "please enter version number, such as x.y.z",
     "Project": "Project",
     "Qingdao": "Qingdao",
-    "Quality": "Quality",
     "Release": "Release",
     "Report": "Report",
     "Resource": "Resource",
@@ -145,7 +142,6 @@
     "Supported Android package versions": "Supported Android package versions",
     "Supported iOS package versions": "Supported iOS package versions",
     "Sydney": "Sydney",
-    "Task": "Task",
     "Test": "Test",
     "Test Management": "Test Management",
     "The administrator has received your request. Please go to": "the administrator has received your request. please come to ",
