--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -917,6 +917,7 @@
     "add configuration": "添加配置",
     "add data source": "添加数据源",
     "add enum value": "添加枚举值",
+    "add issue": "新建问题",
     "add label": "添加标签",
     "add pipeline": "新建流水线",
     "add relation to MR": "关联了MR",
@@ -2812,7 +2813,6 @@
     "waiting for deployment": "等待部署"
   },
   "user": {
-    "API design": "API设计",
     "API management": "API管理",
     "API resource editing": "API 资源编辑",
     "Assignee": "处理者",
