--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1108,11 +1108,10 @@
     "commit ID": "提交ID",
     "commit branch": "提交分支",
     "commit details": "提交详情",
-    "commit history": "提交历史",
     "commit message": "提交信息",
     "commit unchanged": "提交不变",
     "commitID-input-tip": "请输入40位由小写字母和数字组成的字符",
-    "commits": "提交历史",
+    "commits": "提交",
     "committed": "已提交",
     "compare": "比较",
     "comparison result has been folded": "对比结果已被收起",
@@ -1378,13 +1377,11 @@
     "is empty": "为空",
     "issue": "事项",
     "issue custom fields": "事项自定义字段",
-    "issue detail": "问题详情",
     "issue field": "事项字段",
     "issue list": "事项列表",
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
-    "issues": "问题列表",
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
     "iteration goal": "迭代目标",
@@ -1836,7 +1833,6 @@
     "terminate": "终止",
     "test case": "测试用例",
     "test days": "测试天数",
-    "test detail": "测试详情",
     "test leader": "测试负责人",
     "test output": "测试输出",
     "test participant": "测试参与人",
