fix: update setting text

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1757,6 +1757,7 @@
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
     "set the default merge request description template": "set the default merge request description template",
+    "setting": "setting",
     "settings updated successfully": "settings updated successfully",
     "severity": "severity",
     "severity-fatal": "fatal",
