--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -1757,6 +1757,7 @@
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
     "set the default merge request description template": "设置默认的合并请求描述模板",
+    "setting": "设置",
     "settings updated successfully": "更新设置成功",
     "severity": "严重程度",
     "severity-fatal": "致命",
