feat: add create project in project -list

--- a/locales/en.json
+++ b/locales/en.json
@@ -498,6 +498,7 @@
     "format": "Format",
     "full screen": "full screen",
     "global": "global",
+    "go to create a project": "go to create a project",
     "greater than": "greater than",
     "healthy": "healthy",
     "high": "high",
