--- a/locales/zh.json
+++ b/locales/zh.json
@@ -498,6 +498,7 @@
     "format": "格式化",
     "full screen": "全屏",
     "global": "全局",
+    "go to create a project": "去创建一个项目",
     "greater than": "大于",
     "healthy": "健康",
     "high": "高",
