feat: Do not drill down at the application level and change the menu to tabs (#2941)
* refactor: migrate application menu to tabs

* fix: locale

* fix: i18n

* feat: add app switch in tabs

* fix: unify tab text and breadcrumb text

* fix: update i18n

* fix: update setting text

* feat: update check default app tab

* feat: support back to up in tabs

* feat: update tab switch text size

* fix: not trigger when click current tab

* fix: i18n

* fix: watch perm store change

* feat: update i18n

* fix: update problem list paging state

* feat: change to usePerm

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -917,6 +917,7 @@
     "add configuration": "add configuration",
     "add data source": "add data source",
     "add enum value": "add enum value",
+    "add issue": "add issue",
     "add label": "add label",
     "add pipeline": "add pipeline",
     "add relation to MR": "add relation to MR",
@@ -959,6 +960,7 @@
     "app release confirmation": "app release confirmation",
     "app repository address": "app repository address",
     "app types": "app types",
+    "app-issues": "Issues",
     "appMonitor": "appMonitor",
     "application / service / instance name": "application / service / instance name",
     "application branch rule": "application branch rule",
@@ -1030,6 +1032,7 @@
     "branch rule": "branch rule",
     "branch to commit": "branch to commit",
     "branch-config-tip": "The platform has strict relationship between branches and the environment. While the system has built-in best practice configuration, it supports users to customize the configuration",
+    "branches": "branches",
     "bug description": "bug description",
     "build cancelled": "build cancelled",
     "build created successfully": "build created successfully",
@@ -1100,15 +1103,14 @@
     "code-trigger-CI": "Continuous integration is triggered when the branch code changes",
     "collapse file": "collapse file",
     "command": "command",
-    "comment area": "comment area",
     "commented at": "commented at",
     "commit ID": "commit ID",
     "commit branch": "commit branch",
     "commit details": "commit details",
-    "commit history": "commits",
     "commit message": "commit message",
     "commit unchanged": "commit unchanged",
     "commitID-input-tip": "please enter 40 characters consisting of lowercase letters and numbers",
+    "commits": "commits",
     "committed": "opening",
     "compare": "compare",
     "comparison result has been folded": "comparison result has been folded",
@@ -1235,7 +1237,6 @@
     "edit test plan": "edit test plan",
     "efficiency measure": "efficiency measure",
     "email": "email",
-    "emergency level": "emergency level",
     "empty, not empty": "Empty, Not empty",
     "empty-markdown-content": "\n### readme\n\n\n*Here you can show your talents on documentation*\n\n*to let members know the background, goals and other information of the project via awesome graph and text*\n\n*to share project documents, specifications and other materials*\n\n*and also...*",
     "encrypt": "encrypt",
@@ -1375,13 +1376,11 @@
     "is empty": "is empty",
     "issue": "issue",
     "issue custom fields": "issue custom fields",
-    "issue detail": "issue detail",
     "issue field": "issue field",
     "issue list": "issue list",
     "issue type": "issue type",
     "issue workflow": "issue workflow",
     "issue-workflow-config-tip": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
-    "issues": "issues",
     "issues associated label will be deleted, confirm to delete?": "issues associated label will be deleted, confirm to delete?",
     "iteration": "iteration",
     "iteration goal": "iteration goal",
@@ -1421,6 +1420,7 @@
     "medium": "medium",
     "memory size": "memory size",
     "merge description": "merge description",
+    "merge request": "merge request",
     "merge request detail": "merge request detail",
     "merge request has errors": "merge request has errors",
     "merge requests": "merge requests",
@@ -1756,6 +1756,7 @@
     "set as default": "set as default",
     "set default branch successfully": "set default branch successfully",
     "set the default merge request description template": "set the default merge request description template",
+    "setting": "setting",
     "settings updated successfully": "settings updated successfully",
     "severity": "severity",
     "severity-fatal": "fatal",
@@ -1821,6 +1822,7 @@
     "system": "system",
     "system log": "system log",
     "system properties": "system properties",
+    "tags": "tags",
     "target branch": "target branch",
     "target branch is protected, you have no permission yet": "target branch is protected, you have no permission yet",
     "task commands": "task commands",
@@ -1831,7 +1833,6 @@
     "terminate": "terminate",
     "test case": "test case",
     "test days": "test days",
-    "test detail": "test detail",
     "test leader": "test leader",
     "test output": "test output",
     "test participant": "test participant",
@@ -2807,7 +2808,6 @@
     "waiting for deployment": "waiting for deployment"
   },
   "user": {
-    "API design": "API design",
     "API management": "API management",
     "API resource editing": "API resource editing",
     "Assignee": "Assignee",
