--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -917,6 +917,7 @@
     "add configuration": "添加配置",
     "add data source": "添加数据源",
     "add enum value": "添加枚举值",
+    "add issue": "新建问题",
     "add label": "添加标签",
     "add pipeline": "新建流水线",
     "add relation to MR": "关联了MR",
@@ -959,6 +960,7 @@
     "app release confirmation": "应用发布确认",
     "app repository address": "应用仓库地址",
     "app types": "应用类型",
+    "app-issues": "问题列表",
     "appMonitor": "应用监控",
     "application / service / instance name": "应用 / 服务 / 实例名",
     "application branch rule": "应用分支规则",
@@ -1030,6 +1032,7 @@
     "branch rule": "分支规则",
     "branch to commit": "提交分支",
     "branch-config-tip": "平台对于分支与环境有严格关系管理，系统内置最佳实践配置的同时，支持用户进行自定义编辑配置",
+    "branches": "分支",
     "bug description": "缺陷描述",
     "build cancelled": "构建已取消",
     "build created successfully": "创建构建成功",
@@ -1084,7 +1087,7 @@
     "click to expand": "点击展开",
     "clone application": "克隆应用",
     "cluster used by the environment": "环境所用的集群",
-    "code": "代码浏览",
+    "code": "代码",
     "code branch": "代码分支",
     "code content": "代码内容",
     "code coverage statistics": "代码覆盖率统计",
@@ -1100,15 +1103,14 @@
     "code-trigger-CI": "该分支代码发生变化时触发持续集成",
     "collapse file": "收起文件",
     "command": "命令",
-    "comment area": "评论区",
     "commented at": "评论于",
     "commit ID": "提交ID",
     "commit branch": "提交分支",
     "commit details": "提交详情",
-    "commit history": "提交历史",
     "commit message": "提交信息",
     "commit unchanged": "提交不变",
     "commitID-input-tip": "请输入40位由小写字母和数字组成的字符",
+    "commits": "提交",
     "committed": "已提交",
     "compare": "比较",
     "comparison result has been folded": "对比结果已被收起",
@@ -1235,7 +1237,6 @@
     "edit test plan": "编辑测试计划",
     "efficiency measure": "效能度量",
     "email": "邮箱",
-    "emergency level": "紧急程度",
     "empty, not empty": "为空、不为空",
     "empty-markdown-content": "\n### readme\n\n\n*此处可以尽情发挥你文档小能手的才华*\n\n*可以通过一段酷炫的图文让项目成员都清楚项目的背景、目标等信息*\n\n*也可以共享项目文档、规范等材料*\n\n*还可以...*",
     "encrypt": "是否加密",
@@ -1375,13 +1376,11 @@
     "is empty": "为空",
     "issue": "事项",
     "issue custom fields": "事项自定义字段",
-    "issue detail": "问题详情",
     "issue field": "事项字段",
     "issue list": "事项列表",
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
-    "issues": "问题列表",
     "issues associated label will be deleted, confirm to delete?": "将会删除事项中关联的标签，确认删除？",
     "iteration": "迭代",
     "iteration goal": "迭代目标",
@@ -1421,6 +1420,7 @@
     "medium": "严重",
     "memory size": "内存数",
     "merge description": "合并描述",
+    "merge request": "合并请求",
     "merge request detail": "合并请求详情",
     "merge request has errors": "mr存在错误",
     "merge requests": "合并请求",
@@ -1756,6 +1756,7 @@
     "set as default": "设为默认",
     "set default branch successfully": "设置默认分支成功",
     "set the default merge request description template": "设置默认的合并请求描述模板",
+    "setting": "设置",
     "settings updated successfully": "更新设置成功",
     "severity": "严重程度",
     "severity-fatal": "致命",
@@ -1821,6 +1822,7 @@
     "system": "系统",
     "system log": "系统日志",
     "system properties": "系统属性",
+    "tags": "标签",
     "target branch": "目标分支",
     "target branch is protected, you have no permission yet": "目标分支被保护，您暂无权限操作",
     "task commands": "任务指令",
@@ -1831,7 +1833,6 @@
     "terminate": "终止",
     "test case": "测试用例",
     "test days": "测试天数",
-    "test detail": "测试详情",
     "test leader": "测试负责人",
     "test output": "测试输出",
     "test participant": "测试参与人",
@@ -2807,7 +2808,6 @@
     "waiting for deployment": "等待部署"
   },
   "user": {
-    "API design": "API设计",
     "API management": "API管理",
     "API resource editing": "API 资源编辑",
     "Assignee": "处理者",
