fix(dop): problem detail style bug

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -1081,6 +1081,7 @@
     "click to edit": "click to edit",
     "click to expand": "click to expand",
     "clone application": "clone application",
+    "close issue": "close issue",
     "cluster used by the environment": "cluster used by the environment",
     "code": "source",
     "code branch": "code branch",
