fix: problem detail not refresh after comment or close

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -799,7 +799,6 @@
     "API design": "API design",
     "API list": "API list",
     "API overview": "API overview",
-    "APIs": "APIs",
     "About": "About",
     "Add Followers": "Add Followers",
     "After the use case is selected, the batch operation can be performed.": "After the use case is selected, the batch operation can be performed.",
@@ -1019,7 +1018,6 @@
     "blocking": "blocking",
     "board": "board",
     "branch": "branch",
-    "branch comparison": "branch comparison",
     "branch deleted successfully": "branch deleted successfully",
     "branch is protected, you have no permission yet": "branch is protected, you have no permission yet",
     "branch management": "branches",
@@ -1102,7 +1100,6 @@
     "commented at": "commented at",
     "commit ID": "commit ID",
     "commit branch": "commit branch",
-    "commit details": "commit details",
     "commit message": "commit message",
     "commit unchanged": "commit unchanged",
     "commitID-input-tip": "please enter 40 characters consisting of lowercase letters and numbers",
@@ -1174,7 +1171,6 @@
     "data bank": "data bank",
     "data market": "data market",
     "data model": "data model",
-    "data model detail": "data model detail",
     "data sources": "data sources",
     "data task": "data task",
     "date cannot be empty": "date cannot be empty",
@@ -1370,9 +1366,11 @@
     "is editing, document is locked": "is editing, document is locked",
     "is empty": "is empty",
     "issue": "issue",
+    "issue content": "issue content",
     "issue custom fields": "issue custom fields",
     "issue field": "issue field",
     "issue list": "issue list",
+    "issue title": "issue title",
     "issue type": "issue type",
     "issue workflow": "issue workflow",
     "issue-workflow-config-tip": "Project issues include milestone, requirement, bug and task. And you can set up workflow state for each issue if you want",
@@ -1416,7 +1414,6 @@
     "memory size": "memory size",
     "merge description": "merge description",
     "merge request": "merge request",
-    "merge request detail": "merge request detail",
     "merge request has errors": "merge request has errors",
     "merge requests": "merge requests",
     "merged": "merged",
@@ -1832,7 +1829,6 @@
     "test report": "test report",
     "test report details": "test report details",
     "test set": "test set",
-    "test space": "test space",
     "test statistics": "test statistics",
     "test summary": "test summary",
     "testing": "testing",
@@ -1868,10 +1864,8 @@
     "this type is referenced and cannot be deleted": "this type is referenced and cannot be deleted",
     "this use case is invalid, please refine it before citation": "this use case is invalid, please refine it before citation",
     "ticket": "ticket",
-    "ticket content": "ticket content",
     "ticket description": "ticket description",
     "ticket title": "ticket title",
-    "ticket type": "ticket type",
     "time consuming": "time consuming",
     "time cost": "time cost",
     "time period": "time period",
