--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -799,7 +799,6 @@
     "API design": "API 设计",
     "API list": "API 列表",
     "API overview": "API 概况",
-    "APIs": "接口列表",
     "About": "关于",
     "Add Followers": "添加关注人",
     "After the use case is selected, the batch operation can be performed.": "选中用例后，才能进行批量操作",
@@ -1019,7 +1018,6 @@
     "blocking": "阻塞",
     "board": "看板",
     "branch": "分支",
-    "branch comparison": "分支对比",
     "branch deleted successfully": "删除分支成功",
     "branch is protected, you have no permission yet": "该分支被保护, 您暂无权限操作",
     "branch management": "分支管理",
@@ -1102,7 +1100,6 @@
     "commented at": "评论于",
     "commit ID": "提交ID",
     "commit branch": "提交分支",
-    "commit details": "提交详情",
     "commit message": "提交信息",
     "commit unchanged": "提交不变",
     "commitID-input-tip": "请输入40位由小写字母和数字组成的字符",
@@ -1174,7 +1171,6 @@
     "data bank": "数据银行",
     "data market": "数据集市",
     "data model": "数据模型",
-    "data model detail": "数据模型详情",
     "data sources": "数据源",
     "data task": "数据任务",
     "date cannot be empty": "日期不能为空",
@@ -1370,9 +1366,11 @@
     "is editing, document is locked": "正在编辑, 文档已锁定",
     "is empty": "为空",
     "issue": "事项",
+    "issue content": "问题详情",
     "issue custom fields": "事项自定义字段",
     "issue field": "事项字段",
     "issue list": "事项列表",
+    "issue title": "问题标题",
     "issue type": "事项类型",
     "issue workflow": "事项工作流",
     "issue-workflow-config-tip": "事项类型覆盖里程碑、需求、缺陷和任务，可以对每个事项类型进行不同配置。如需改变工作流类型，您可以选择具体的事项类型进行修改。",
@@ -1416,7 +1414,6 @@
     "memory size": "内存数",
     "merge description": "合并描述",
     "merge request": "合并请求",
-    "merge request detail": "合并请求详情",
     "merge request has errors": "mr存在错误",
     "merge requests": "合并请求",
     "merged": "已合并",
@@ -1832,7 +1829,6 @@
     "test report": "测试报告",
     "test report details": "测试报告详情",
     "test set": "测试集",
-    "test space": "测试空间",
     "test statistics": "测试统计",
     "test summary": "测试总结",
     "testing": "测试中",
@@ -1868,10 +1864,8 @@
     "this type is referenced and cannot be deleted": "该类型被引用，无法删除",
     "this use case is invalid, please refine it before citation": "该用例无效，请先完善后再引用",
     "ticket": "工单",
-    "ticket content": "工单内容",
     "ticket description": "工单描述",
     "ticket title": "工单标题",
-    "ticket type": "工单类型",
     "time consuming": "耗时",
     "time cost": "用时",
     "time period": "时间段",
