feat: update project deploy app list

--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -821,6 +821,10 @@
     "Date started": "Date started",
     "Deleting the output parameter will delete the corresponding parameter name assertion. Continue?": "delete the parameter will delete the corresponding parameter name assertion synchronously, confirm delete?",
     "Deleting will put the current test set and included test cases into the recycle bin.": "delete will cause the current test set and the included test cases to enter the recycle bin, ",
+    "Deploy canceled": "Deploy canceled",
+    "Deploy failed": "Deploy failed",
+    "Deploy success": "Deploy success",
+    "Deploying": "Deploying",
     "Did not join any app, was invited to join or create app": "Did not join any app, was invited to join or create app",
     "Did not join any project, was invited to join project or create project": "Did not join any project, was invited to join project or create project",
     "DingTalk notification address": "DingTalk notification address",
@@ -895,6 +899,7 @@
     "Today is {time}": "Today is {time}",
     "Up to 255 characters for directory name": "Up to 255 characters for directory name",
     "Up to 255 characters for url path": "Up to 255 characters for url path",
+    "Wait deploy": "Wait deploy",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "When enabled, application deployment needs to be reviewed and approved by the project administrator.",
     "When you click directly, it will execute cases without environment.": "when you click directly, will execute cases without environment",
     "Work description": "Work description",
