--- a/shell/app/locales/zh.json
+++ b/shell/app/locales/zh.json
@@ -821,6 +821,10 @@
     "Date started": "开始时间",
     "Deleting the output parameter will delete the corresponding parameter name assertion. Continue?": "删除出参将同步删除对应参数名断言，确认删除？",
     "Deleting will put the current test set and included test cases into the recycle bin.": "删除会导致当前测试集及包含的测试用例将进入回收站，",
+    "Deploy canceled": "取消部署",
+    "Deploy failed": "部署失败",
+    "Deploy success": "部署成功",
+    "Deploying": "部署中",
     "Did not join any app, was invited to join or create app": "没有加入任何应用，被邀请加入或创建应用",
     "Did not join any project, was invited to join project or create project": "没有加入任何项目，被邀请加入项目或创建项目",
     "DingTalk notification address": "钉钉通知地址",
@@ -895,6 +899,7 @@
     "Today is {time}": "今天是 {time}",
     "Up to 255 characters for directory name": "目录名最大长度255",
     "Up to 255 characters for url path": "url 路径最多255个字符",
+    "Wait deploy": "等待部署",
     "When enabled, application deployment needs to be reviewed and approved by the project administrator.": "开启后，相关应用部署需要项目管理员审核同意后才能继续进行",
     "When you click directly, it will execute cases without environment.": "直接点击时，所选环境为无环境",
     "Work description": "工作内容",
