feat(msp): locale

--- a/locales/en.json
+++ b/locales/en.json
@@ -801,6 +801,7 @@
     "role": "role",
     "role permissions description": "role permissions description",
     "rolled back": "rolled back",
+    "rule": "rule",
     "rule management": "rule management",
     "running": "running",
     "running environment": "running environment",
