--- a/locales/zh.json
+++ b/locales/zh.json
@@ -801,6 +801,7 @@
     "role": "角色",
     "role permissions description": "角色权限说明",
     "rolled back": "已回滚",
+    "rule": "规则",
     "rule management": "规则管理",
     "running": "运行中",
     "running environment": "运行环境",
