refactor: update issue drawer and detail style

--- a/locales/zh.json
+++ b/locales/zh.json
@@ -48,6 +48,7 @@
     "DingTalk address": "钉钉地址",
     "Dubai": "迪拜",
     "East China {num}": "华东{num}",
+    "Enter to save quickly, Enter + {meta} to save and continue": "Enter 快速创建，Enter + {meta} 保存并继续创建",
     "Europe & America": "欧洲与美洲",
     "Fast data": "快数据平台",
     "February": "2月",
@@ -233,6 +234,7 @@
     "artifact management": "制品管理",
     "ascend": "升序",
     "assert {name} setting is abnormal": "断言 {name} 设置异常",
+    "assignee": "指定人",
     "associated ability": "关联通用能力",
     "associated microservice": "关联微服务",
     "association": "关联",
@@ -289,13 +291,16 @@
     "check detail": "查看详情",
     "check log": "查看日志",
     "check whether your request is approved": "查看您的请求是否审批通过。",
+    "choose": "选择",
     "choose cluster": "选择集群",
     "choose global configuration": "选择全局配置",
     "choose self": "选择自己",
     "city": "城市区域",
     "clear": "清空",
     "clear content": "清空内容",
+    "click to collapse": "点击收起",
     "click to copy": "单击复制",
+    "click to view more": "点击查看更多",
     "click to view password": "点击查看密码",
     "client": "客户端",
     "client identifier": "客户端标识",
@@ -317,7 +322,6 @@
     "cluster overview": "集群总览",
     "cluster resource": "集群资源",
     "clusters": "集群",
-    "collapse description": "收起描述",
     "colour": "着色",
     "comment": "评论",
     "commit": "提交",
@@ -438,7 +442,6 @@
     "enable": "启用",
     "enabled successfully": "启用成功",
     "enter details": "进入详情",
-    "enter key to save quickly": "回车键快速保存",
     "entry domain": "入口域名",
     "entry mode": "录入模式",
     "env": "环境",
@@ -465,7 +468,6 @@
     "exited the organization successfully": "退出组织成功",
     "exited the project successfully": "退出项目成功",
     "expand": "展开",
-    "expand description": "展开描述",
     "export": "导出",
     "export configuration": "导出配置",
     "export format": "导出格式",
@@ -513,6 +515,7 @@
     "initialize": "初始化",
     "initializing": "初始化",
     "input": "输入框",
+    "input {name} title": "输入{name}标题",
     "insert node": "插入节点",
     "installer machine IP": "installer机器IP",
     "instance": "实例",
@@ -852,6 +855,7 @@
     "start with {name}": "以 {name} 开头",
     "startup error": "启动错误",
     "startup failed": "启动失败",
+    "state": "状态",
     "status": "状态",
     "status switched successfully": "状态切换成功",
     "stay tuned": "敬请期待",
