--- a/shell/app/locales/en.json
+++ b/shell/app/locales/en.json
@@ -811,6 +811,7 @@
     "Built-in code base": "Built-in code base",
     "Business-app-intro": "Business applications mainly refer to a combination of microservices that handle certain types of business processes, such as a member management application.",
     "Code scanning configuration is mainly divided into rule configuration and code quality access control configuration. When the access control rules are met, it means that the code quality threshold cannot be passed.": "code scanning configuration is mainly divided into rule configuration and code quality access control configuration, where access control rules meet the situation, on behalf of the code quality threshold cannot pass",
+    "Comment ({meta} + Enter to send)": "Comment ({meta} + Enter to send)",
     "Config content": "Config content",
     "Config import": "Config import",
     "Create a new issue, and you can drag it to the iteration on the right and set its priority.": "to create new items and arrange the priority of items by dragging to the right to iterate",
@@ -863,7 +864,6 @@
     "Please fill in the json expression of obtained target key to determine if the key exists.": "Please fill in the json expression of obtained target key to determine if the key exists.",
     "Project homepage": "Project homepage",
     "Projects": "Projects",
-    "Remaining": "Remaining",
     "Scenes": "Scenes",
     "Search for the test plan I am involved in/responsible for.": "Search for the test plan I am involved in/responsible for.",
     "System built-in Git repository": "System built-in Git repository",
@@ -906,7 +906,7 @@
     "ability app": "ability app",
     "access control value": "access control value",
     "account switching": "account switching",
-    "activity log": "activity log",
+    "activity": "activity",
     "actual value": "actual value",
     "add": "add",
     "add access control rules": "add access control rules",
@@ -919,7 +919,6 @@
     "add label": "add label",
     "add pipeline": "add pipeline",
     "add relation to MR": "add relation to MR",
-    "add remark": "add remark",
     "add service instance": "add service instance",
     "add test plan name": "add test plan name",
     "add test set": "add test set",
@@ -1015,6 +1014,7 @@
     "batch processing": "batch processing",
     "batch-delete-tip-content": "the scanning rules will be permanently deleted",
     "be formal": "be formal",
+    "be related by these issues": "be related by these issues",
     "be sure to make {name} official?": "be sure to make {name} official?",
     "belong to, not belong to": "Belong, Not belong",
     "belongs to": "belongs to",
@@ -1069,10 +1069,12 @@
     "checkrun-success-tip": "the code review in MR has been successful. please check the pipeline for details",
     "chinese, letters, numbers": "chinese, letters, numbers",
     "chinese/english search for input form": "chinese/english search for input form",
+    "choose MR": "choose MR",
     "choose branch": "choose branch",
     "choose certificate": "choose certificate",
     "choose frequently used applications and set them as stars for easy operation": "choose frequently used applications and set them as stars for easy operation",
     "choose frequently used project and set them as stars for easy operation": "choose frequently used project and set them as stars for easy operation",
+    "choose issues": "choose issues",
     "choose module": "choose module",
     "choose the workflow file (master branch)": "choose the workflow file (master branch)",
     "circulation setting": "circulation setting",
@@ -1102,6 +1104,7 @@
     "collapse file": "collapse file",
     "command": "command",
     "commented at": "commented at",
+    "comments": "comments",
     "commit ID": "commit ID",
     "commit branch": "commit branch",
     "commit message": "commit message",
@@ -1146,8 +1149,6 @@
     "copy issue": "copy issue",
     "copy to": "copy to",
     "cores": "cores",
-    "create and include the task": "create and include the task",
-    "create and relate to the issue": "create and relate to the issue",
     "create deployment": "create deployment",
     "create document": "create document",
     "create folder": "create folder",
@@ -1161,6 +1162,7 @@
     "creating folder is only allowed under the branch": "creating folder is only allowed under the branch",
     "creation date": "creation date",
     "creation method": "creation method",
+    "creator": "creator",
     "current": "current",
     "current branch or path": "current branch or path",
     "current month": "current month",
@@ -1299,10 +1301,8 @@
     "filter by alarm type": "filter by alarm type",
     "filter by application name": "filter by application name",
     "filter by committed message": "filter by committed message",
-    "filter by creator": "filter by creator",
     "filter by data source name": "filter by data source name",
     "filter by priority": "filter by priority",
-    "filter condition": "filter condition",
     "filter name": "filter name",
     "folder is created successfully": "folder is created successfully",
     "follow": "follow",
@@ -1340,7 +1340,6 @@
     "import parameters": "import parameters",
     "import source": "import source",
     "import use case": "import use case",
-    "include existing tasks": "include existing tasks",
     "included tasks": "included tasks",
     "informal": "informal",
     "initiated": "initiated",
@@ -1405,7 +1404,6 @@
     "lock-operation-tip": "the repository is locked and this operation cannot be performed",
     "logAnalysis": "logAnalysis",
     "logService": "logService",
-    "logged": "logged",
     "loop strategy": "loop strategy",
     "low": "low",
     "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.": "mainly manage the custom configuration of issue field attributes and saved as the issue template configuration of the entire organization-level project.",
@@ -1488,7 +1486,6 @@
     "no member is concerned about it": "no member is concerned about it",
     "no more than 30 characters": "no more than 30 characters",
     "no releases have been selected yet": "no releases have been selected yet",
-    "no time logged": "no time logged",
     "no {name}": "no {name}",
     "node params": "node params",
     "node reference": "node reference",
@@ -1561,6 +1558,7 @@
     "plan details": "plan details",
     "plan name": "plan name",
     "plan-remove-case-confirm": "are you sure to remove the currently selected use case in the current plan?",
+    "planFinishedAt": "planFinishedAt",
     "please add a test leader": "please add a test leader",
     "please add tasks first, and then configure outputs": "please add tasks first, and then configure outputs",
     "please add test participants": "please add test participants",
@@ -1671,19 +1669,16 @@
     "reference certificate": "reference certificate",
     "refresh every {time}, click to refresh now": "refresh every {time}, click to refresh now",
     "registration center": "registration center",
-    "relate to mr": "relate to merge request",
     "relate to test case": "relate to test case",
-    "related by these issues": "related by these issues",
     "related issue type": "related issue type",
+    "related mr": "relate to merge request",
     "related task": "related task",
-    "related to existing issues": "related to existing issues",
     "related to these issues": "related to these issues",
     "relation added successfully": "relation added successfully",
     "release name": "release name",
     "release relationship": "release relationship",
     "release version": "release version",
     "remark": "remark",
-    "remarked at": "remarked at",
     "rename": "rename",
     "reopen": "reopen",
     "repeat number of lines": "repeat number of lines",
@@ -1723,7 +1718,6 @@
     "search by ID, person or product information": "search by ID, person or product information",
     "search by application name": "search by application name",
     "search by chinese/english name of attribute": "search by chinese/english name of attribute",
-    "search by id or title": "search by id or title",
     "search for": "search for",
     "search label under project": "search label under project",
     "searchCenter": "searchCenter",
@@ -1885,6 +1879,7 @@
     "total number of pipelines": "total number of pipelines",
     "total number of use cases": "total number of use cases",
     "traffic load": "traffic load",
+    "transfer": "transfer",
     "transfer-custom-addon": "The following configuration can be imported into other projects to create a custom server",
     "trigger timing": "trigger timing",
     "ultimate edition": "ultimate edition",
@@ -1894,6 +1889,7 @@
     "unlimited": "unlimited",
     "unpin": "unpin",
     "unpinned successfully": "unpinned successfully",
+    "unspecified": "unspecified",
     "update completed": "update completed",
     "update priority": "update priority",
     "update-dice-yml-env": "Do you need to update dice-yml, such as adding (modifying) environment variables, etc",
@@ -2270,6 +2266,7 @@
     "http status code": "http status code",
     "identification": "identification",
     "idle connections": "idle connections",
+    "independent authorization method": "independent authorization method",
     "index": "index",
     "information": "information",
     "ingress traffic monitoring": "ingress traffic monitoring",
