--- a/locales/en.json
+++ b/locales/en.json
@@ -48,6 +48,7 @@
     "DingTalk address": "DingTalk address",
     "Dubai": "Dubai",
     "East China {num}": "East China {num}",
+    "Enter to save quickly, Enter + {meta} to save and continue": "Enter to save quickly, Enter + {meta} to save and continue",
     "Europe & America": "Europe & America",
     "Fast data": "Fast data",
     "February": "February",
@@ -233,6 +234,7 @@
     "artifact management": "artifact management",
     "ascend": "ascend",
     "assert {name} setting is abnormal": "assert {name} setting is abnormal",
+    "assignee": "assignee",
     "associated ability": "associated ability",
     "associated microservice": "Associated microservice",
     "association": "association",
@@ -289,13 +291,16 @@
     "check detail": "check detail",
     "check log": "check log",
     "check whether your request is approved": "check whether your request is approved.",
+    "choose": "choose",
     "choose cluster": "choose cluster",
     "choose global configuration": "choose global configuration",
     "choose self": "choose self",
     "city": "city",
     "clear": "clear",
     "clear content": "clear content",
+    "click to collapse": "click to collapse",
     "click to copy": "click to copy",
+    "click to view more": "click to view more",
     "click to view password": "click to view password",
     "client": "client",
     "client identifier": "client identifier",
@@ -317,7 +322,6 @@
     "cluster overview": "cluster overview",
     "cluster resource": "cluster resource",
     "clusters": "clusters",
-    "collapse description": "collapse description",
     "colour": "colour",
     "comment": "comment",
     "commit": "commit",
@@ -438,7 +442,6 @@
     "enable": "enable",
     "enabled successfully": "enabled successfully",
     "enter details": "enter details",
-    "enter key to save quickly": "enter key to save quickly",
     "entry domain": "entry domain",
     "entry mode": "entry mode",
     "env": "env",
@@ -465,7 +468,6 @@
     "exited the organization successfully": "exited the organization successfully",
     "exited the project successfully": "exited the project successfully",
     "expand": "expand",
-    "expand description": "expand description",
     "export": "export",
     "export configuration": "export configuration",
     "export format": "export format",
@@ -513,6 +515,7 @@
     "initialize": "initialize",
     "initializing": "initializing",
     "input": "input",
+    "input {name} title": "input {name} title",
     "insert node": "insert node",
     "installer machine IP": "installer machine IP",
     "instance": "instance",
@@ -852,6 +855,7 @@
     "start with {name}": "start with {name}",
     "startup error": "startup error",
     "startup failed": "startup failed",
+    "state": "state",
     "status": "status",
     "status switched successfully": "status switched successfully",
     "stay tuned": "stay tuned",
